{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 10,
  "lineage": "5681ffcb-fbb0-1b28-fa67-d695111e81af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sprints_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05bfc1ab11bfbf484",
            "arn": "arn:aws:ec2:us-east-1:780575896117:instance/i-0a55bed0bfd38fa11",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a55bed0bfd38fa11",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef6f674e7ffa2cbe",
            "private_dns": "ip-10-0-0-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.134",
            "public_ip": "18.207.153.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060c97b58a045661b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": ["sg-009b7cd8ca5f4b44e"],
            "source_dest_check": true,
            "subnet_id": "subnet-0381590eff5e9b576",
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": ["sg-009b7cd8ca5f4b44e"]
          },
          "dependencies": [
            "aws_security_group.sprints_sg",
            "aws_subnet.sprints_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sprints_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780575896117:internet-gateway/igw-04aac704173eda83d",
            "id": "igw-04aac704173eda83d",
            "owner_id": "780575896117",
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "vpc_id": "vpc-0bffb6f414cf5c587"
          },
          "dependencies": ["aws_vpc.my_vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sprints_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780575896117:route-table/rtb-057a824560cb15270",
            "id": "rtb-057a824560cb15270",
            "owner_id": "780575896117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04aac704173eda83d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bffb6f414cf5c587"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_internet_gateway.sprints_gw", "aws_vpc.my_vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sprints_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031a95d5003b40bdd",
            "route_table_id": "rtb-057a824560cb15270",
            "subnet_id": "subnet-0381590eff5e9b576"
          },
          "dependencies": [
            "aws_internet_gateway.sprints_gw",
            "aws_route_table.sprints_rt",
            "aws_subnet.sprints_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sprints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780575896117:security-group/sg-009b7cd8ca5f4b44e",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009b7cd8ca5f4b44e",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "780575896117",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bffb6f414cf5c587"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_vpc.my_vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sprints_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780575896117:subnet/subnet-0381590eff5e9b576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0381590eff5e9b576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780575896117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sprints"
            },
            "tags_all": {
              "Name": "Sprints"
            },
            "vpc_id": "vpc-0bffb6f414cf5c587"
          },
          "dependencies": ["aws_vpc.my_vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780575896117:vpc/vpc-0bffb6f414cf5c587",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007192ac67c368d7d",
            "default_route_table_id": "rtb-045c1585fb73f4869",
            "default_security_group_id": "sg-052b67bc59d81276d",
            "dhcp_options_id": "dopt-0c4429425fa9a1cf8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bffb6f414cf5c587",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045c1585fb73f4869",
            "owner_id": "780575896117",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}